# Filtering-and-edge-detection-application

./: CMakeLists.txt  QtWidgetsApplication2.cpp  QtWidgetsApplication2.h  QtWidgetsApplication2.ui  QtWidgetsApplication2.vcxproj  QtWidgetsApplication2.vcxproj.filters  README.md  edgeDetection.cpp  edgeDetection.h  histograms.cpp  histograms.h  main.cpp  source_code.cpp  source_code.h
x64/Debug/QtWidget.E820A8F4.tlog/: QtWidgetsApplication2.write.1u.tlog  moc.write.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
x64/Debug/moc/: moc_QtWidgetsApplication2.cpp
x64/Debug/qmake/temp/: E820A8F4-BECE-460E-8E3E-465CFB9F5204.QtWidgetsApplication2.designtime.idx  qtvars.vcxproj  qtvars_x64_Debug.props
x64/Debug/uic/: ui_QtWidgetsApplication2.h
x64/Release/: QtWidgetsApplication2.exe.recipe
x64/Release/QtWidget.E820A8F4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  QtWidgetsApplication2.lastbuildstate  QtWidgetsApplication2.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.write.1u.tlog
x64/Release/moc/: moc_QtWidgetsApplication2.cpp
x64/Release/qmake/: qtvars_x64_Release.props
x64/Release/qmake/temp/: .qmake.stash  qtvars.vcxproj
x64/Release/rcc/: qrc_QtWidgetsApplication2.cpp
x64/Release/uic/: ui_QtWidgetsApplication2.h
